--- a/app_scss/amp-partials/_accordian.scss
+++ b/app_scss/amp-partials/_accordian.scss
@@ -35,6 +35,7 @@
         -webkit-transition: all .12s ease;
         -moz-transition: all .12s ease;
         transition: all .12s ease;
+        // TODO: Bourbon mixin
     }
 }
 
