--- a/app_scss/amp.scss
+++ b/app_scss/amp.scss
@@ -8,8 +8,12 @@
       $amp_white: #ffffff;
       $amp_link-colour: #23517a;
 
+      $pull-bg: #2D3137;
+      $put-out_color: #f9c94c;
+
       //  section colours
 
+      $home: #13161b;
       $frontpage: #AAA;
       $news: #CC0000;
       $sport: #3ea447;
