--- a/app_scss/amp.css
+++ b/app_scss/amp.css
@@ -1,22 +1,19 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'DINWeb-Medium';
-  src: url("/assets/fonts/DINWebPro-Medium.eot");
-  src: url("/assets/fonts/DINWebPro-Medium.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/DINWebPro-Medium.woff") format("woff");
-  font-weight: bold;
-  font-style: normal; }
-@font-face {
-  font-family: 'it-icons';
-  src: url("/assets/fonts/it-icons.eot?fzeavz");
-  src: url("/assets/fonts/it-icons.eot?fzeavz#iefix") format("embedded-opentype"), url("/assets/fonts/it-icons.ttf?fzeavz") format("truetype"), url("/assets/fonts/it-icons.woff?fzeavz") format("woff"), url("/assets/fonts/it-icons.svg?fzeavz#it-icons") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'FontAwesome';
-  font-weight: normal;
+  font-family: "DINWeb-Medium";
   font-style: normal;
-  src: url("/assets/fonts/fontawesome-webfont.eot?v=4.3.0");
-  src: url("/assets/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0") format("embedded-opentype"), url("/assets/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"), url("/assets/fonts/fontawesome-webfont.woff?v=4.3.0") format("woff"), url("/assets/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"), url("/assets/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg"); }
+  font-weight: bold;
+  src: url("/assets/fonts/DINWebPro-Medium.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/DINWebPro-Medium.woff2") format("woff2"), url("/assets/fonts/DINWebPro-Medium.woff") format("woff"), url("/assets/fonts/DINWebPro-Medium.ttf") format("truetype"), url("/assets/fonts/DINWebPro-Medium.svg#DINWeb-Medium") format("svg"); }
+@font-face {
+  font-family: "it-icons";
+  font-style: normal;
+  font-weight: normal;
+  src: url("/assets/fonts/it-icons.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/it-icons.woff2") format("woff2"), url("/assets/fonts/it-icons.woff") format("woff"), url("/assets/fonts/it-icons.ttf") format("truetype"), url("/assets/fonts/it-icons.svg#it-icons") format("svg"); }
+@font-face {
+  font-family: "FontAwesome";
+  font-style: normal;
+  font-weight: normal;
+  src: url("/assets/fonts/fontawesome-webfont normal.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/fontawesome-webfont normal.woff2") format("woff2"), url("/assets/fonts/fontawesome-webfont normal.woff") format("woff"), url("/assets/fonts/fontawesome-webfont normal.ttf") format("truetype"), url("/assets/fonts/fontawesome-webfont normal.svg#FontAwesome") format("svg"); }
 /*------------------------------------*\
   #GENERAL
 \*------------------------------------*/
@@ -603,6 +600,16 @@ section[expanded=""] .accordion_header {
       padding-top: 30px;
       content: '\201C'; }
 
+body.home .inline__content--pullquote {
+  border-color: #13161b; }
+  body.home .inline__content--pullquote:before {
+    color: #13161b; }
+
+body.homepage .inline__content--pullquote {
+  border-color: #CC0000; }
+  body.homepage .inline__content--pullquote:before {
+    color: #CC0000; }
+
 body.frontpage .inline__content--pullquote {
   border-color: #AAA; }
   body.frontpage .inline__content--pullquote:before {
@@ -657,11 +664,6 @@ body.offers .inline__content--pullquote {
   border-color: #006666; }
   body.offers .inline__content--pullquote:before {
     color: #006666; }
-
-body.homepage .inline__content--pullquote {
-  border-color: #CC0000; }
-  body.homepage .inline__content--pullquote:before {
-    color: #CC0000; }
 
 body.sponsored .inline__content--pullquote {
   border-color: #011235; }
